# old_code

./: README.md
pixiv_crawel/: READEME.md  a.html  b.html  cookie1  cookie2  res.html  scrapy.cfg  start.sh
pixiv_crawel/pixiv_crawel/: items.py  middlewares.py  my_dupefilter.py  my_scheduler.py  pipelines.py  pixiv_schelduler.py  settings.py
pixiv_crawel/pixiv_crawel/spiders/: memberspider.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/clang_fornt/: analyzer.h  compiledatabase.cpp  compiledatabase.h
src/lib/: all.h  bigtable.cpp  context.h  decl.h  expr.h  location.h  statement.h  sval.cpp  sval.h  typedef.h
src/lib/err/: error.cpp
static_ana/: CMakeLists.txt
static_ana/src/clang_fornt/: analyzer.cpp  converter.h
static_ana/src/lib/: bigtable.h  codeblock.cpp  codeblock.h  func.h  memoryregion.cpp  memoryregion.h
static_ana/src/lib/err/: bugreporter.cpp  bugreporter.h  error.h
static_ana/test/: decl.cpp  normal.hpp  simple.c  simple.cpp
test/: a.out  normal.cpp  normal_c17.cpp  pure.cpp  pure.h  readfile.cpp  simpleloop.cpp  z3test.cpp
